--- a/blogs.html
+++ b/blogs.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html lang="en">
-  
-<!-- Mirrored from softivuslab.com/portify/versions/gradiant-bg/blogs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 30 Apr 2025 07:29:58 GMT -->
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
-    <title>Portify - Personal Portfolio Website Template</title>
-  <script defer src="assets/js/app.js"></script><link href="assets/css/index.css" rel="stylesheet"></head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <!-- SEO Meta Tags -->
+  <title>Tech Blog - Full Stack Development Insights | Hitesh Pandya</title>
+  <meta name="description" content="Explore web development tutorials, coding tips, and tech insights from Hitesh Pandya. Topics include React.js, Node.js, Python, and full-stack development best practices." />
+  <meta name="keywords" content="web development blog, coding tutorials, tech articles, full stack development, react tutorials, node.js guides, python programming, development tips" />
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Tech Blog - Full Stack Development Insights | Hitesh Pandya" />
+  <meta property="og:description" content="Web development tutorials and insights covering React.js, Node.js, Python, and full-stack development best practices." />
+  <meta property="og:type" content="blog" />
+  <meta property="og:url" content="https://hiteshpandya.vercel.app/blogs.html" />
+  <meta property="og:image" content="assets/images/blog-hero.png" />
+  
+  <!-- Additional Meta Tags -->
+  <meta name="author" content="Hitesh Pandya" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Favicon and Stylesheets -->
+
+  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
+  <link href="assets/css/Style.css" rel="stylesheet">
+</head>
   <body>
     <!-- header section -->
 
