--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <title>Hitesh Pandya - Senior Full Stack Developer | React | Node.js | Python</title>
+    <link rel="manifest" href="manifest.json">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
